--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
     <link rel="stylesheet" href="plugins.css">
     <link rel="stylesheet" href="style.css">
     <script src="modernizr-2.8.3.min.js"></script>
+    <meta name='Author' content='UP Bangladesh'/>
+    <meta name='robots' content='all'/>
+    <meta name='googlebot' content='all'/>
+    <meta name='googlebot-news' content='all'/>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G16GVEBVG0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-G16GVEBVG0');
+    </script>
 </head>
 
 <body>
@@ -79,8 +91,8 @@
                         </div>
                         <div class="col-auto d-flex flex-md-row flex-lg-row-reverse">
                             <!--Header Donation Button-->
-                            <div class="header-donation">
-                                <a class="btn" data-scroll href="#donation-area">Join Today</a>
+                            <div class="header-donation d-none">
+                                <a class="btn" data-scroll href="#join-upb">Join Today</a>
                             </div>
                             <!--Header Search End-->
 
@@ -90,9 +102,9 @@
                                     <ul>
                                         <li class="active"><a href="#hero-area">home</a></li>
                                         <li><a href="#about-area">about</a></li>
-                                        <li><a href="#event-area">event</a></li>
-                                        <li><a href="#gallery-area">gallery</a></li>
-                                        <li><a href="#blog-area">blog</a></li>
+                                        <!-- <li><a href="#event-area">event</a></li> -->
+                                        <!-- <li><a href="#gallery-area">gallery</a></li> -->
+                                        <!-- <li><a href="#blog-area">blog</a></li> -->
                                         <li><a href="#footer-area">contact us</a></li>
                                     </ul>
                                 </nav>
@@ -322,7 +334,7 @@
                     <div class="row">
 
                         <div class="copyright text-center col-xs-12">
-                            <p> Copyright © <span>UP Bangladesh </span> 2025. All right reserved. </p>
+                            <p> Copyright &copy; 2025 <span> <a href="/">UP Bangladesh</a> </span>. All right reserved. </p>
                         </div>
 
                     </div>
@@ -404,5 +416,4 @@
         });
     </script>
 </body>
-
 </html>
