--- a/demo.html
+++ b/demo.html
@@ -17,6 +17,18 @@
     <link rel="stylesheet" href="plugins.css">
     <link rel="stylesheet" href="style.css">
     <script src="modernizr-2.8.3.min.js"></script>
+    <meta name='Author' content='UP Bangladesh'/>
+    <meta name='robots' content='all'/>
+    <meta name='googlebot' content='all'/>
+    <meta name='googlebot-news' content='all'/>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G16GVEBVG0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-G16GVEBVG0');
+    </script>
 </head>
 
 <body>
