--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
         </section>
 
         <!-- Special Area -->
-        <section id="special-area" class="about-area section pb-120 pt-120 d-none" aria-labelledby="special-title">
+        <section id="special-area" class="about-area section pb-120 pt-120" aria-labelledby="special-title">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
+                        <img class="img-responsive" src="img/protest.jpg" alt="Cultural Event Image" style="border-radius: 20px;">
                         <!-- <img class="img-responsive" src="img/1432.jpg" alt="Cultural Event Image" style="border-radius: 20px;"> -->
                     </div>
                 </div>
