--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <section id="special-area" class="about-area section pb-120 pt-120" aria-labelledby="special-title">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 mx-auto">
+                    <div class="col-md-8 mx-auto text-center">
                         <img class="img-responsive" src="img/protest.jpg" alt="Cultural Event Image" style="border-radius: 20px;">
                         <!-- <img class="img-responsive" src="img/1432.jpg" alt="Cultural Event Image" style="border-radius: 20px;"> -->
                     </div>
