--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </section>
 
         <!-- Special Area -->
-        <section id="special-area" class="about-area section pb-120 pt-120" aria-labelledby="special-title">
+        <section id="special-area" class="about-area section pt-60" aria-labelledby="special-title">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 mx-auto text-center">
