--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>United People's Bangladesh - UP Bangladesh</title>
+    <title>United People's Bangladesh - UP Bangladesh (UPB) </title>
     <meta name="description" content="United People's Bangladesh (UP Bangladesh) aims to transform political culture and restore the social contract for an equitable, prosperous Bangladesh by uniting youth courage and elder wisdom.">
     <meta name="keywords" content="UP Bangladesh, United People's Bangladesh, political platform, social justice, Bangladesh politics, youth movement">
     <meta name="author" content="UP Bangladesh">
