--- a/404.html
+++ b/404.html
@@ -115,12 +115,12 @@
       
 
         <!-- Special Area -->
-        <section id="special-area" class="about-area section pb-120 pt-120 d-none" aria-labelledby="special-title">
+        <section id="special-area" class="about-area section pb-120 pt-120" aria-labelledby="special-title">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
-                      <h1>404 Not Found</h1>
-                        <a href="/">Home</a>
+                      <h1 class="display-1">404 Not Found</h1>
+                        <a href="/" class="stretched-link btn btn-primary p-20">Home</a>
                     </div>
                 </div>
             </div>
