--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>United People's Bangladesh - UP Bangladesh</title>
+    <title>United People's Bangladesh - UP Bangladesh (UPB) </title>
     <meta name="description" content="United People's Bangladesh (UP Bangladesh) aims to transform political culture and restore the social contract for an equitable, prosperous Bangladesh by uniting youth courage and elder wisdom.">
     <meta name="keywords" content="UP Bangladesh, United People's Bangladesh, political platform, social justice, Bangladesh politics, youth movement">
     <meta name="author" content="UP Bangladesh">
@@ -118,8 +118,8 @@
         <section id="special-area" class="about-area section pb-120 pt-120" aria-labelledby="special-title">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 mx-auto">
-                      <h1 class="display-1">404 Not Found</h1>
+                    <div class="col-md-8 mx-auto text-center">
+                      <h1 class="display-1 pt-40 pb-40">404 Not Found</h1>
                         <a href="/" class="stretched-link btn btn-primary p-20">Home</a>
                     </div>
                 </div>
