--- a/404.html
+++ b/404.html
@@ -118,7 +118,7 @@
         <section id="special-area" class="about-area section pb-120 pt-120" aria-labelledby="special-title">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 mx-auto text-center">
+                    <div class="col-md-8 mx-auto text-center" style="color:#075e55">
                       <h1 class="display-1 pt-40 pb-40">404 Not Found</h1>
                         <a href="/" class="stretched-link btn btn-primary p-20">Home</a>
                     </div>
