--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                             <nav class="main-menu collapse" id="main-menu">
                                 <ul>
                                     <li class="active"><a href="#hero-area" aria-current="page">Home</a></li>
+                                    <li><a href="/events.html">Events</a></li>
                                     <li><a href="#about-area">About</a></li>
                                     <li><a href="#footer-area">Contact Us</a></li>
                                 </ul>
