--- a/events.html
+++ b/events.html
@@ -103,6 +103,7 @@
                             <nav class="main-menu collapse" id="main-menu">
                                 <ul>
                                     <li class="active"><a href="#hero-area" aria-current="page">Home</a></li>
+                                    <li><a href="/events">Events</a></li>
                                     <li><a href="#about-area">About</a></li>
                                     <li><a href="#footer-area">Contact Us</a></li>
                                 </ul>
@@ -117,11 +118,14 @@
 
         <!-- Special Area -->
         <section id="special-area" class="about-area section pb-120 pt-120" aria-labelledby="special-title">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
                     <div class="col-md-12 mx-auto text-center" style="color:#075e55">
                       <h1 class="display-1 pt-40 pb-40"> Our Events </h1>
                       <p> <a href="https://www.facebook.com/UPBangladesh24" class="stretched-link btn btn-primary p-20"> Check our Facebook page for Live update </a></p>
+                    </div>
+
+                    <div class="col-md-6 mx-auto text-center">
                       <a href="https://www.facebook.com/nayeemahmadBD/posts/pfbid028PmHfKotHMtfvcbEmT8miC9TLcVfu5FT1KijLr2UTh5bWzPgkzdAc8k8H9WwmTXml"> </a><img class="img-fluid img-responsive img-thumbnail" src="/img/lamia-mymesing.jpg" alt="জুলাই গণঅভ্যুত্থানে শহীদ পিতার কন্যা কিশোরী মেয়ে লামিয়ার খুনি-ধর্ষকদের দৃষ্টান্তমূলক শাস্তির দাবিতে মানববন্ধন সময়: ২৭ এপ্রিল (রবিবার), বিকাল ৫টা স্থান: শহীদ ফিরোজ জাহাঙ্গীর চত্বর, গাঙ্গিনাপাড়, ময়মনসিংহ " /> </a>
                         
                     </div>
