--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                                 <ul>
                                     <li class="active"><a href="#hero-area" aria-current="page">Home</a></li>
                                     <li><a href="/events">Events</a></li>
+                                    <li><a href="/media.html">Media</a></li>
                                     <li><a href="#about-area">About</a></li>
                                     <li><a href="#footer-area">Contact Us</a></li>
                                 </ul>
