--- a/media.html
+++ b/media.html
@@ -128,26 +128,26 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 mx-auto text-center" style="color:#075e55">
-                      <h2 class="display-3 pt-20 pb-20"> শহীদ পরিবারের ওপর হামলার ঘটনায় নোয়াখালীতে আপ বাংলাদেশের মানববন্ধন </h1>
-                    <div/>
+                      <h2 class="display- pt-20 pb-20"> শহীদ পরিবারের ওপর হামলার ঘটনায় নোয়াখালীতে আপ বাংলাদেশের মানববন্ধন </h1>
+                    </div>
                     <div class="col-md-4">
-                      <h3 class="display-4 pt-20 pb-20"> শহীদ পরিবারের ওপর হামলার ঘটনায় নোয়াখালীতে আপ বাংলাদেশের মানববন্ধন </h1>
+                      <h3 class="display-6 pt-20 pb-20"> শহীদ পরিবারের ওপর হামলার ঘটনায় নোয়াখালীতে আপ বাংলাদেশের মানববন্ধন </h1>
                         <a href="https://www.somoynews.tv/news/2025-04-29/wDW96wTA" target="_blank">
                            <img class="img-fluid img-responsive img-thumbnail" src="/media/somoi-noakhali-28-4-25.jpg" />
                         </a>
-                    <div/>
+                    </div>
                     <div class="col-md-4">
-                      <h3 class="display-4 pt-20 pb-20"> নোয়াখালীতে জুলাই বিপ্লবে শহীদের ভাইয়ের উপর হামলা ও ধর্ষকদের শাস্তির দাবিতে মানববন্ধন </h1>
+                      <h3 class="display-6 pt-20 pb-20"> নোয়াখালীতে জুলাই বিপ্লবে শহীদের ভাইয়ের উপর হামলা ও ধর্ষকদের শাস্তির দাবিতে মানববন্ধন </h1>
                         <a href="#" target="_self">
                            <img class="img-fluid img-responsive img-thumbnail" src="/media/bdtimes-noakhali-29-4-25.jpg" />
                         </a>
-                    <div/>
+                    </div>
                     <div class="col-md-4">
-                      <h3 class="display-4 pt-20 pb-20"> নোয়াখালীতে শহীদ পরিবারের সদস্যের উপর সন্ত্রাসী হামলার প্রতিবাদ ও ধর্ষকের শাস্তির দাবিতে মানব বন্ধন করেছে ইউনাইটেড পিপলস বাংলাদেশ </h1>
+                      <h3 class="display-6 pt-20 pb-20"> নোয়াখালীতে শহীদ পরিবারের সদস্যের উপর সন্ত্রাসী হামলার প্রতিবাদ ও ধর্ষকের শাস্তির দাবিতে মানব বন্ধন করেছে ইউনাইটেড পিপলস বাংলাদেশ </h1>
                         <a href="#" target="_self">
                            <img class="img-fluid img-responsive img-thumbnail" src="/media/central-noakhali-29-4-25.jpg" />
                         </a>
-                    <div/>
+                    </div>
                 </div>
             </div>
         </section>
