--- a/index.html
+++ b/index.html
@@ -80,12 +80,14 @@
         </section>
 
         <!-- Special Area -->
-        <section id="special-area" class="about-area section pt-60 d-none" aria-labelledby="special-title">
+        <section id="special-area" class="about-area section pt-60" aria-labelledby="special-title">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 mx-auto text-center">
-                        <img class="img-responsive" src="img/protest.jpg" alt="Cultural Event Image" style="border-radius: 20px;">
-                        <!-- <img class="img-responsive" src="img/1432.jpg" alt="Cultural Event Image" style="border-radius: 20px;"> -->
+                    <div class="col-md-6 mx-auto text-center">
+                        <img class="img-responsive" src="img/upb.jpg" alt="Up Bangladesh Image" style="border-radius: 10px;">
+                    </div>
+                    <div class="col-md-6 mx-auto text-center">
+                        <img class="img-responsive" src="img/nari.jpg" alt="Nari Image" style="border-radius: 10px;">
                     </div>
                 </div>
             </div>
