--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mx-auto text-center">
-                        <img class="img-responsive" src="img/upb.jpg" alt="Up Bangladesh Image" style="border-radius: 10px;">
+                        <img class="img-responsive" src="img/upb.jpg" alt="Up Bangladesh Image" style="border-radius: 10px;max-width:100%;">
                     </div>
                     <div class="col-md-6 mx-auto text-center">
-                        <img class="img-responsive" src="img/nari.jpg" alt="Nari Image" style="border-radius: 10px;">
+                        <img class="img-responsive" src="img/nari.jpg" alt="Nari Image" style="border-radius: 10px;max-width:100%;">
                     </div>
                 </div>
             </div>
