--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="modernizr-2.8.3.min.js"></script>
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-G16GVEBVG0"></script>
+    <link rel="manifest" href="/site.webmanifest">
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
