--- a/slogan.html
+++ b/slogan.html
@@ -73,7 +73,7 @@
             }
         </style>
 
-        <div id="slogans">
+        <div id="slogans" class="pt-120 pb-120">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 text-center mx-auto">
