--- a/beta.html
+++ b/beta.html
@@ -140,13 +140,22 @@
 
         <!-- Special Area -->
         <section id="special-area" class="about-area section pt-60" aria-labelledby="special-title">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6 mx-auto text-center">
-                        <img class="img-responsive" src="img/upb.jpg" alt="Up Bangladesh Image" style="border-radius: 10px;max-width:100%;">
+                    <div class="col-md-4 mx-auto text-center">
+                        <a href="https://www.facebook.com/UPBangladesh24" target="_blank">
+                            <img class="img-responsive" src="img/upb.jpg" alt="Up Bangladesh Image" style="border-radius: 10px;max-width:100%;">
+                        </a>
                     </div>
-                    <div class="col-md-6 mx-auto text-center">
-                        <img class="img-responsive" src="img/nari.jpg" alt="Nari Image" style="border-radius: 10px;max-width:100%;">
+                    <div class="col-md-4 mx-auto text-center">
+                        <a href="https://www.facebook.com/UPBangladesh24" target="_blank">
+                            <img class="img-responsive" src="img/nari.jpg" alt="Nari Image" style="border-radius: 10px;max-width:100%;">
+                        </a>
+                    </div>
+                    <div class="col-md-4 mx-auto text-center">
+                        <a href="https://www.facebook.com/UPBangladesh24" target="_blank">
+                            <img class="img-responsive" src="img/alem.png" alt="Alem Image" style="border-radius: 10px;max-width:100%;">
+                        </a>
                     </div>
                 </div>
             </div>
