--- a/demo.html
+++ b/demo.html
@@ -864,7 +864,7 @@ Chief Initiator, United Peoples Bangladesh
                         <div class="col-auto">
                             <!--Header Logo Start-->
                             <div class="navbar-header d-flex justify-content-between">
-                                <a href="index.html" class="logo navbar-brand"><img src="logo.jpg" alt="logo" style="border-radius:10px"></a>
+                                <a href="index.html" class="logo navbar-brand"><img src="logo.png" alt="logo" style="border-radius:10px"></a>
                                 <button class="navbar-toggle collapsed d-block d-md-none" data-bs-toggle="collapse" data-bs-target="#main-menu">
                                     <i class="zmdi zmdi-menu menu-open"></i>
                                     <i class="zmdi zmdi-close menu-close"></i>
