--- a/beta.html
+++ b/beta.html
@@ -148,25 +148,25 @@
             <div class="container-fluid">
                 <div class="row">
                     
-                    <div class="col-md-3 mx-auto text-center">
+                    <div class="col-md-3 mb-20 mx-auto text-center">
                         <a href="https://www.facebook.com/UPBangladesh24" target="_blank">
                             <img class="img-responsive" src="img/upb.jpg" alt="Up Bangladesh Image" style="border-radius: 10px;max-width:100%;">
                         </a>
                     </div>
 
-                    <div class="col-md-3 mx-auto text-center">
+                    <div class="col-md-3 mb-20 mx-auto text-center">
                         <a href="https://www.facebook.com/UPBangladesh24" target="_blank">
                             <img class="img-responsive" src="img/nari.jpg" alt="Nari Image" style="border-radius: 10px;max-width:100%;">
                         </a>
                     </div>
 
-                    <div class="col-md-3 mx-auto text-center">
+                    <div class="col-md-3 mb-20 mx-auto text-center">
                         <a href="https://www.facebook.com/photo/?fbid=122116523468832819&set=a.122102869022832819" target="_blank">
                             <img class="img-responsive" src="img/alem.png" alt="Alem Image" style="border-radius: 10px;max-width:100%;">
                         </a>
                     </div>
 
-                    <div class="col-md-3 mx-auto text-center">
+                    <div class="col-md-3 mb-20 mx-auto text-center">
                         <a href="https://www.facebook.com/photo/?fbid=122116926734832819&set=a.122102869022832819" target="_blank">
                             <img class="img-responsive" src="img/labour.jpg" alt="Alem Image" style="border-radius: 10px;max-width:100%;">
                         </a>
@@ -189,7 +189,7 @@
                 <!-- About Content -->
                 <div class="row mb-40">
                     <div class="col-md-8 mx-auto">
-                        <div style="margin-bottom: 20px;">
+                        <div class="mb-20">
                             <p>
                                 বাংলাদেশের বিদ্যমান দুর্বৃত্তায়নের রাজনীতি, দুর্নীতির রাজনৈতিক অর্থনীতি ও ক্ষমতা কাঠামোর মধ্যে দিয়ে যে ফ্যাসিবাদের পাটাতন কায়েম হয়েছিল যেখানে মানবিক মর্যাদা, সামাজিক সুবিচার ও ন্যায়নীতি কেবলই ফাঁকাবুলির মতো শোনা যেতো; ছাত্র-জনতার জুলাইয়ে দীর্ঘ রক্তিম নাজরানার মাধ্যমে সে জুলুমের অবসান হলেও মানুষের মানবিক মর্যাদার পূর্ণাঙ্গ বিকাশ, অর্থনৈতিক আজাদি, ইনসাফ ও ন্যায়নীতির প্রতিষ্ঠা সম্ভব হয়নি। ইউনাইটেড পিপলস বাংলাদেশ, ( ইউপিবি/আপ বাংলাদেশ) নতুন বাংলাদেশে বিদ্যমান ফ্যাসিবাদী কাঠামো ব্যবস্থা ও দুর্বৃত্তয়নের রাজনৈতিক সংস্কৃতির মূলৎপাটন করে বৈষম্যহীন ও সমৃদ্ধ বাংলাদেশ তৈরি করতে কাজ করবে।
                             </p>
@@ -206,7 +206,7 @@
         </section>
 
         <!-- our vision & mission -->
-        <section id="vision-mission-area" class="vision-mission-area section pb-120 pt-20" aria-labelledby="vision-title">
+        <section id="vision-mission-area" class="vision-mission-area section pb-40 pt-20" aria-labelledby="vision-title">
             <div class="container">
                 <!-- Section Title -->
                 <div class="row">
@@ -216,7 +216,7 @@
                 </div>
                 <!-- Vision & Mission Content -->
                 <div class="row mb-40">
-                    <div class="col-md-6 mx-auto">
+                    <div class="col-md-6 mx-auto pb-40">
                         <h2>
                             ভিশনঃ 
                         </h2>
@@ -224,7 +224,7 @@
                             ১৯৪৭-১৯৭১-২০২৪ এর বিপ্লবকে ধারণ করে, বাংলাদেশের বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন, সমাজের সর্বস্তরে যোগ্য ও নৈতিক নেতৃত্বের প্রতিষ্ঠা, সামাজিক সুবিচার ও মানবিক মর্যাদা প্রতিষ্ঠাকরণ, ও ধর্মীয় বিশ্বাস ও মূল্যবোধের প্রতি শ্রদ্ধাশীল সামাজিক চুক্তির পুনর্বহাল এর মাধ্যমে বৈষম্যহীন-সমৃদ্ধ বাংলাদেশ গঠন করা।
                         </p>
                     </div>
-                    <div class="col-md-6 mx-auto">
+                    <div class="col-md-6 mx-auto pb-40">
                         <h2>
                             মিশনঃ
                         </h2>
