--- a/beta.html
+++ b/beta.html
@@ -137,7 +137,7 @@
                             আসসালামু আলাইকুম বাংলাদেশ
                         </p>
                         <p>
-                            বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন ও সামাজিক চুক্তির পুনর্বহাল, জুলাইয়ের প্রকৃত আকাঙ্ক্ষার বাস্তবায়ন এবং বৈষম্যহীন ও সমৃদ্ধ বাংলাদেশ গড়ার লক্ষ্যকে সামনে রেখে গঠিত নতুন রাজনৈতিক প্লাটফর্ম — ইউনাইটেড পিপলস বাংলাদেশ। সংক্ষেপে - আপ বাংলাদেশ। আসছে ৯ই মে, রোজ শুক্রবার বিকাল ৪টায়, জাতীয় শহীদ মিনারে অনুষ্ঠিত হতে যাচ্ছে আপ বাংলাদেশ-এর বহুল আকাঙ্ক্ষিত আত্মপ্রকাশ অনুষ্ঠান। নতুন বাংলাদেশ বিনির্মাণের এই সফরে সঙ্গী হতে চলে আসুন আপনিও। জাতি-ধর্ম-বর্ণ নির্বিশেষে সকলকে জানাই সাদর আমন্ত্রণ!
+                            বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন ও সামাজিক চুক্তির পুনর্বহাল, জুলাইয়ের প্রকৃত আকাঙ্ক্ষার বাস্তবায়ন এবং বৈষম্যহীন ও সমৃদ্ধ বাংলাদেশ গড়ার লক্ষ্যকে সামনে রেখে গঠিত নতুন রাজনৈতিক প্লাটফর্ম — ইউনাইটেড পিপলস বাংলাদেশ। সংক্ষেপে - আপ বাংলাদেশ। আজ ৯ই মে,  শুক্রবার বিকাল ৪টায়, জাতীয় শহীদ মিনারে অনুষ্ঠিত হবে আপ বাংলাদেশ-এর বহুল আকাঙ্ক্ষিত আত্মপ্রকাশ অনুষ্ঠান। নতুন বাংলাদেশ বিনির্মাণের এই সফরে সঙ্গী হতে চলে আসুন আপনিও। জাতি-ধর্ম-বর্ণ নির্বিশেষে সকলকে জানাই সাদর আমন্ত্রণ!
                         </p>
                         <p>
                             ইনকিলাব জিন্দাবাদ
@@ -183,7 +183,7 @@
                 <!-- Section Title -->
                 <div class="row">
                     <div class="section-title text-center col-12 mb-60">
-                        <h1 id="about-title"> ইউনাইটেড পিপলস বাংলাদেশ (আপ বাংলাদেশ) </h1>
+                        <h1 id="about-title" style="color:#90161f;font-size:xx-large;"> ইউনাইটেড পিপলস বাংলাদেশ (আপ বাংলাদেশ) </h1>
                     </div>
                 </div>
                 <!-- About Content -->
@@ -211,7 +211,7 @@
                 <!-- Section Title -->
                 <div class="row">
                     <div class="section-title text-center col-12 mb-60">
-                        <h1 id="vision-title"> ভিশন ও মিশন </h1>
+                        <h1 id="vision-title" style="color:#90161f;font-size:xx-large;"> ভিশন ও মিশন </h1>
                     </div>
                 </div>
                 <!-- Vision & Mission Content -->
@@ -404,7 +404,7 @@
                             <li> <strong> মাসুদ রানা </strong></li>
                             <li> <strong> আসমা উল হুসনা </strong></li>
                             <li> <strong> ফারজানা আক্তার </strong></li>
-                            <li> <strong> আহমদ করিম চৌধুরী </strong></li>
+                            <li> <strong> আহম্মদ করিম চৌধুরী </strong></li>
                             <li> <strong> আব্দুল আজিজ ভূঁইয়া </strong></li>
                             <li> <strong> নজরুল ইসলাম </strong></li>
                             <li> <strong> উমার রাজী আল ফারূক </strong></li>
