--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             ভিশনঃ 
                         </h2>
                         <p>
-                            ১৯৪৭-১৯৭১-২০২৪ এর বিপ্লবকে ধারণ করে, বাংলাদেশের বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন, সমাজের সর্বস্তরে যোগ্য ও নৈতিক নেতৃত্বের প্রতিষ্ঠা, সামাজিক সুবিচার ও মানবিক মর্যাদা প্রতিষ্ঠাকরণ, ও ধর্মীয় বিশ্বাস ও মূল্যবোধের প্রতি শ্রদ্ধাশীল সামাজিক চুক্তির পুনর্বহাল এর মাধ্যমে বৈষম্যহীন-সমৃদ্ধ বাংলাদেশ গঠন করা।
+                            ১৯৪৭-১৯৭১-২০২৪ এর আকাঙ্ক্ষাকে ধারণ করে, বাংলাদেশের বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন, সমাজের সর্বস্তরে যোগ্য ও নৈতিক নেতৃত্বের প্রতিষ্ঠা, সামাজিক সুবিচার ও মানবিক মর্যাদা প্রতিষ্ঠাকরণ, ও ধর্মীয় বিশ্বাস ও মূল্যবোধের প্রতি শ্রদ্ধাশীল সামাজিক চুক্তির পুনর্বহাল এর মাধ্যমে বৈষম্যহীন-সমৃদ্ধ বাংলাদেশ গঠন করা।
                         </p>
                     </div>
                     <div class="col-md-6 mx-auto pb-40">
