--- a/committee.html
+++ b/committee.html
@@ -199,6 +199,7 @@
                         position: relative;
                         width: 100%;
                         min-height: 180px;
+                        background-color: #0a5334;
                     }
                     .card-header img{
                         position: absolute;
