--- a/committee.html
+++ b/committee.html
@@ -414,10 +414,10 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="13">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="মোঃ রায়হানুল ইসলাম" class="img-fluid card-img-top" />
+                                <img src="members/abrar-hamim.png" alt="আবরার হামিম" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
-                                <h3 class="card-title" style="font-size: 18px;"> মোঃ রায়হানুল ইসলাম </h3>
+                                <h3 class="card-title" style="font-size: 18px;"> আবরার হামিম </h3>
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
@@ -431,10 +431,10 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="14">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="সাইফুল ইসলাম সুজন" class="img-fluid card-img-top" />
+                                <img src="members/jahid-hasan.png" alt="ডা. জাহিদ হাসান" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
-                                <h3 class="card-title" style="font-size: 18px;"> সাইফুল ইসলাম সুজন </h3>
+                                <h3 class="card-title" style="font-size: 18px;"> ডা. জাহিদ হাসান </h3>
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
@@ -448,10 +448,10 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="15">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="আবদুল কাইয়ূম সৌরভ" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="মাসুদ রানা" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
-                                <h3 class="card-title" style="font-size: 18px;"> আবদুল কাইয়ূম সৌরভ </h3>
+                                <h3 class="card-title" style="font-size: 18px;"> মাসুদ রানা </h3>
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
@@ -465,10 +465,10 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="16">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="বদরে আলম শাহীন" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="আসমা উল হুসনা" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
-                                <h3 class="card-title" style="font-size: 18px;"> বদরে আলম শাহীন </h3>
+                                <h3 class="card-title" style="font-size: 18px;"> আসমা উল হুসনা </h3>
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
@@ -635,7 +635,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="26">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="আহছান উল্লাহ" class="img-fluid card-img-top" />
+                                <img src="members/ahsan.png" alt="আহছান উল্লাহ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> আহছান উল্লাহ </h3>
@@ -937,7 +937,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="44">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="রাহাত বিন সায়েফ" class="img-fluid card-img-top" />
+                                <img src="members/rahat.png" alt="রাহাত বিন সায়েফ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> রাহাত বিন সায়েফ </h3>
@@ -1346,7 +1346,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="68">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="মিনহাজুর রহমান রেজবী" class="img-fluid card-img-top" />
+                                <img src="members/rezvi.png" alt="মিনহাজুর রহমান রেজবী" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মিনহাজুর রহমান রেজবী </h3>
